--- a/src/main.html
+++ b/src/main.html
@@ -21,3 +21,7 @@
 -->
 
 {% extends "base.html" %}
+
+{% block announce %}
+  <!-- Add announcement here, including arbitrary HTML -->
+{% endblock %}
