--- a/src/overrides/main.html
+++ b/src/overrides/main.html
@@ -34,12 +34,10 @@
 
 <!-- Announcement bar -->
 {% block announce %}
-  <a href="https://twitter.com/squidfunk">
-    For updates follow <strong>@squidfunk</strong> on
-    <span class="twemoji twitter">
-      {% include ".icons/fontawesome/brands/twitter.svg" %}
-    </span>
-    <strong>Twitter</strong>
+  <a href="https://thetechtribe.com">
+    To chat about the project go to <strong>@squidfunk</strong> on
+
+    <strong>TheTechTribe</strong>
   </a>
 {% endblock %}
 
