--- a/material/overrides/main.html
+++ b/material/overrides/main.html
@@ -6,12 +6,10 @@
   <link rel="stylesheet" href="{{ 'overrides/assets/stylesheets/main.8464ae1a.min.css' | url }}">
 {% endblock %}
 {% block announce %}
-  <a href="https://twitter.com/squidfunk">
-    For updates follow <strong>@squidfunk</strong> on
-    <span class="twemoji twitter">
-      {% include ".icons/fontawesome/brands/twitter.svg" %}
-    </span>
-    <strong>Twitter</strong>
+  <a href="https://thetechtribe.com">
+    To chat about the project search <strong>MSP2CSP</strong> on
+
+    <strong>TheTechTribe</strong>
   </a>
 {% endblock %}
 {% block content %}
